k8s/front-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-pod
  template:
    metadata:
      labels:
        app: front-pod
    spec:
      containers:
        - name: magic-web-front
          image: xxl1997/magic-web-front:0.0.1-SNAPSHOT
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 30
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: front-service

spec:
  selector:
    app: front-pod
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  # 内网访问
  type: ClusterIP
