k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: magic-ingress
  annotations:
  # 可以根据需要添加 Ingress 注解，例如设置超时时间、重写规则等
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-service
                port:
                  number: 8080
